@@ -25,7 +25,7 @@ minimum distance for unique vertex locations as negative exponent
 Scene Options
 .TP
 \fB\-t\fR
-normal position. t \- translate, p \- positional (default: p)
+normal position. n \- natural, a \- add element centers (default: n)
 .TP
 \fB\-u\fR
 unit normals
