@@ -49,7 +49,7 @@ public:
   string ifile;
   string ofile;
 
-  char normal_position = 'p';         // a to translate normals
+  char normal_position = 'n';         // a to add normals to centers
   bool unit_normals = false;          // use unit normals
   char force_normals_polarity = '\0'; // for a polarity of the normals
   string show_pointing = "oih";       // default to show outward, inward, hemi
@@ -93,7 +93,7 @@ Options
   -o <file> write output to file (default: write to standard output)
 
 Scene Options
-  -t        normal position. t - translate, p - positional (default: p)
+  -t        normal position. n - natural, a - add element centers (default: n)
   -u        unit normals
   -e        connect to element centroid (for reference)
   -p <opt>  force polarity. o - outward, i - inward
@@ -143,8 +143,8 @@ void off_normals_opts::process_command_line(int argc, char **argv)
 
     switch (c) {
     case 't':
-      if (strlen(optarg) > 1 || !strchr("tp", *optarg))
-        error(msg_str("normal position is '%s', must be t or p", optarg), c);
+      if (strlen(optarg) > 1 || !strchr("na", *optarg))
+        error(msg_str("normal position is '%s', must be n or a", optarg), c);
       normal_position = *optarg;
       break;
 
@@ -332,7 +332,7 @@ void add_normals(Geometry &geom, const off_normals_opts &opts)
         if (opts.unit_normals)
           normal = normal.unit();
 
-        if (opts.normal_position == 't')
+        if (opts.normal_position == 'a')
           normal += geom.face_cent(i);
 
         ngeom.add_vert(normal, col);
@@ -412,7 +412,7 @@ void add_normals(Geometry &geom, const off_normals_opts &opts)
       if (opts.unit_normals)
         normal = normal.unit();
 
-      if (opts.normal_position == 't')
+      if (opts.normal_position == 'a')
         normal += centroid(geom.verts(), edge);
 
       ngeom.add_vert(normal, col);
@@ -495,7 +495,7 @@ void add_normals(Geometry &geom, const off_normals_opts &opts)
       if (opts.unit_normals)
         normal = normal.unit();
 
-      if (opts.normal_position == 't')
+      if (opts.normal_position == 'a')
         normal += verts[i];
 
       ngeom.add_vert(normal, col);
