@@ -21,6 +21,7 @@ XX-XX-22 Adrian Rossiter <adrian@antiprism.com>
             off_color_radial: added -V color and option f
                added -E color and options e,f
             symmetro: added m3 built in color map for better number of sides
+            off_normals: restored -t options to add element centers to normals
             johnson: updated j88-j90 formulas. documented other formulas
             uniform: substring search removed
             polygon: orientation changed for models 2 -s2, 2 -s4, 4, 5, 6, 8,
